<?xml version="1.0"?>
<package format="2">
  <name>template_planner_pkg</name>
  <version>0.0.0</version>
  <description>The template_planner_pkg package</description>

  <maintainer email="kanishk.vishwa2001@gmail.com">Kanishk Vishwakarma</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<nav_core plugin = "${prefix}/template_planner_plugin.xml"/>

  </export>
</package>
